--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Particle Dodge Game</title>
         <style>
+            body {
+                margin: 0;
+                padding: 0;
+                overflow: hidden;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
             canvas {
                 border: 1px solid black;
                 background-color: #f4f4f4;
@@ -12,7 +20,6 @@
         </style>
     </head>
     <body>
-        <canvas id="gameCanvas" width="800" height="600"></canvas>
         <script type="module" src="game.js"></script>
     </body>
 </html>
