--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             }
             #mobile-arrow-buttons {
                 position: fixed;
-                top: 72%;
-                left: 87%;
+                top: 60%;
+                right: 18%;
                 width: 1px;
                 height: 1px;
             }
             #mobile-arrow-buttons div {
-                width: 5vh;
-                height: 5vh;
+                width: 3rem;
+                height: 3rem;
                 border: 1px solid black;
                 border-radius: 50%;
                 background-color: #f4f4f4;
@@ -34,22 +34,22 @@
 
             #ArrowUp {
                 position: absolute;
-                transform: translate(0, -160%);
+                transform: translate(0, -140%);
                 border-bottom: 1px solid black;
             }
             #ArrowDown {
                 position: absolute;
-                transform: translate(0, 160%);
+                transform: translate(0, 140%);
                 border-top: 1px solid black;
             }
             #ArrowLeft {
                 position: absolute;
-                transform: translate(-160%, 0);
+                transform: translate(-140%, 0);
                 border-right: 1px solid black;
             }
             #ArrowRight {
                 position: absolute;
-                transform: translate(160%, 0);
+                transform: translate(140%, 0);
                 border-left: 1px solid black;
             }
 
@@ -65,32 +65,40 @@
             #ArrowRight:active {
                 background-color: #d4d4d4;
             }
-
-            #Shift {
+            
+            #z {
                 position: fixed;
-                top: 80%;
-                left: 10%;
-                width: 5vh;
-                height: 5vh;
+                top: 50%;
+                left: 7%;
+                width: 3rem;
+                height: 3rem;
                 border: 1px solid black;
                 border-radius: 50%;
                 background-color: #f4f4f4;
+                font-size: 2rem;
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
-            #Shift:active {
+            #z:active {
                 background-color: #d4d4d4;
             }
 
-            #z {
+            #Shift {
                 position: fixed;
-                top: 65%;
-                left: 7%;
-                width: 5vh;
-                height: 5vh;
+                top: 75%;
+                left: 10%;
+                width: 3rem;
+                height: 3rem;
                 border: 1px solid black;
                 border-radius: 50%;
                 background-color: #f4f4f4;
+                font-size: 2rem;
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
-            #z:active {
+            #Shift:active {
                 background-color: #d4d4d4;
             }
 
@@ -107,8 +115,8 @@
         <!-- mobile buttons -->
         <div id="mobile-buttons">
             <button id="toggle-fullscreen">FullScreen</button>
-            <div id="z"></div>
-            <div id="Shift"></div>
+            <div id="z">Z</div>
+            <div id="Shift">⇧</div>
             <div id="mobile-arrow-buttons">
                 <div id="ArrowUp"></div>
                 <div id="ArrowDown"></div>
