chore: add credits on html

--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
         <script type="module" src="game.js"></script>
         <!--
             Credits:
-                Ocean Animation Background:
+                Animation - Ocean Background:
                     Zabin, zookeeper
                     https://opengameart.org/content/the-battle-for-wesnoth-water-animation
+                Animation - Boss Kraken:
+                    Spring
+                    https://opengameart.org/content/cugzilia-ii-prototype-squid
         -->
     </body>
 </html>
