fix: modified shield logic and added shield image

--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@
         <script type="module" src="game.js"></script>
         <!--
             Credits:
-                Animation - Ocean Background:
+                Art - Ocean Background:
                     Zabin, zookeeper
                     https://opengameart.org/content/the-battle-for-wesnoth-water-animation
-                Animation - Boss Kraken:
+                Art - Boss Kraken:
                     Spring
                     https://opengameart.org/content/cugzilia-ii-prototype-squid
+                Art - Shield Effect:
+                    Bonsaiheldin
+                    https://opengameart.org/content/shield-effect
         -->
     </body>
 </html>
