chore: update credits

--- a/index.html
+++ b/index.html
@@ -22,15 +22,21 @@
         <script type="module" src="game.js"></script>
         <!--
             Credits:
-                Art - Ocean Background:
+                Art - Ocean Animation Background:
                     Zabin, zookeeper
                     https://opengameart.org/content/the-battle-for-wesnoth-water-animation
-                Art - Boss Kraken:
+                Art - Boss Kraken Animation:
                     Spring
                     https://opengameart.org/content/cugzilia-ii-prototype-squid
                 Art - Shield Effect:
                     Bonsaiheldin
                     https://opengameart.org/content/shield-effect
+                Art - Explosion Effect Animation:
+                    floatvoid
+                    https://opengameart.org/content/pixel-art-explosion-animation-0
+                Art - Sea Background:
+                    kmm625
+                    https://www.reddit.com/r/PixelArt/comments/6x3336/oc_ocean_view_pixel_dailies/?utm_source=share&utm_medium=web3x&utm_name=web3xcss&utm_term=1&utm_content=share_button
         -->
     </body>
 </html>
