--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
         <link rel="stylesheet" href="index.css" />
     </head>
     <body>
+        <canvas id="game-canvas"></canvas>
         <!-- mobile buttons -->
-        <div id="mobile-buttons">
+        <div id="mobile-buttons" style="display:none;">
             <button id="toggle-fullscreen">FullScreen</button>
             <div id="z">Z</div>
             <div id="Shift">⇧</div>
@@ -19,7 +20,7 @@
                 <div id="ArrowRight"></div>
             </div>
         </div>
-        <script type="module" src="game.js"></script>
+        <script type="module" src="intro.js"></script>
         <!--
             Credits:
                 Art - Ocean Animation Background:
