fix: modified index.html file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Particle Dodge Game</title>
+        <title>Sailor Mr. Moon</title>
         <link rel="stylesheet" href="index.css" />
     </head>
     <body>
@@ -22,6 +22,12 @@
         </div>
         <script type="module" src="intro.js"></script>
         <!--
+            Developed by:
+                Moon Junho
+                aka ProdMoon
+                https://github.com/ProdMoon
+                항해 플러스 제1회 코육대 출품작
+
             Credits:
                 Art - Ocean Animation Background:
                     Zabin, zookeeper
